# git-log-viewer

./: .bandit  .gitignore  .gitsubtrees  CHANGELOG.md  Cargo.toml  HISTORY.md  Home.md  MANIFEST.in  Makefile  Manual.adoc  Manual.asciidoc  README.md  TODO.md  __init__.py  build.rs  glv.1  icon.py  lexer.py  log.py  main.py  man-inline-macro.rb  project.yaml  pygit-viewer.1  requirements.txt  setup.cfg  setup.py  stderr  test-requirements.txt  tox.ini  utils.py
docs/: Home.md  Makefile  Manual.asciidoc  glv.1
docs/Decision Records/: 003 Print Log Output After Exit.md
experiments/: browse_simple.py  example0.py  example1.py  example2.arrows.py  pf.py  pf2.py  pfurwid.py  urwid_log.py
features/: __init__.py  commit-types.feature  commit.feature  first.feature  folding.feature  history_entry.feature  ranges.feature  revision-parsing.feature  steps.py
glv/: __init__.py  actors.py  cache.py  cli.py  commit.py  icon.py  lexer.py  main.py  providers.py  proxies.py  utils.py
glv/ui/: __init__.py  diff_view.py  history.py  log_entry.py  status.py
glv/vcs/: __init__.py
promptoolkit-experiments/: full-screen-demo.py  hello_world.py  line_pager.py
pygit_viewer/: __init__.py  actors.py  diff_view.py  lexer.py  line.py  main.py  providers.py  status.py  utils.py
pygit_viewer/ui/: diff_view.py  history.py  log.py  status.py
pygit_viewer/vcs/: __init__.py
src/: cache.rs  commit.rs  config.rs  core.rs  credentials.rs  default_styles.rs  detail.rs  fork_point.rs  github.rs  history.rs  history_adapter.rs  history_entry.rs  history_table.rs  lib.rs  main.rs  raw.rs  scroll.rs  search.rs  style.rs  subtrees.rs  utils.rs  views.rs
src/actors/: bitbucket.rs  fork_point.rs  github.rs  mod.rs  subtrees.rs
src/ui/: input.rs  layouts.rs  list.rs  mod.rs  search.rs
src/ui/base/: area.rs  data.rs  mod.rs  paging.rs  search.rs  test_helpers.rs
src/ui/layouts/: mod.rs  split.rs
tests/: cucumber.rs  history_entry_steps.rs  steps.rs
ui/: diff_view.py  history.py  status.py
vcs/: __init__.py
