[package]
name = "glv"
version = "3.0.0-beta.5"
authors = ["Bahtiar `kalkin-` Gadimov <bahtiar@gadimov.de>"]
edition = "2021"
description = "Git log viewer supporting un/folding merges"
license = "AGPL-3.0-or-later"
repository = "https://github.com/kalkin/git-log-viewer"


[dependencies]
configparser = "3"
crossterm = "^0.22.0"
curl = "0.4.*"
dirs = "^4.0.0"
getset = "0.1.*"
git-wrapper = "0.5.*"
git-stree = "0.2.*"
lazy_static = "1.4"
vte = "0.10.1"
posix-errors = "^1.2.0"
subject-classifier = "0.2.*"
thiserror = "1"
tinyjson = "2"
netrc = "^0.4.1"
unicode-segmentation = "1.7.1"
unicode-width = "0.1.7"
unicode-truncate = "0.2.0"
url = "2"
which = "4"
xdg = "^2.1"
clap = { version="^3.0.0", default-features=false, features=["std", "cargo"] }
log = "^0.4"
simple_logger = { version="^2.1.0", default-features=false, features=["stderr", "colors"] }

[dev-dependencies]
lipsum = "^0.8.0"
