[package]
name = 'glv'
authors = ['Bahtiar `kalkin-` Gadimov <bahtiar@gadimov.de>']
categories = ['command-line-utilities', 'development-tools']
description = 'Git log viewer supporting un/folding merges'
edition = '2021'
keywords = ['git', 'tui']
license = 'AGPL-3.0-or-later'
repository = 'https://github.com/kalkin/git-log-viewer'
version = '3.0.4'

[dependencies]
crossterm = '^0.25.0'
curl = '0.4.*'
directories = '^4.0.0'
getset = '0.1.*'
git-stree = '0.2.*'
git-wrapper = '0.6.*'
lazy_static = '1.4'
log = '^0.4'
memory_logger = { version = '^0.1.1', features = ["blocking"] }
netrc = '^0.4.1'
posix-errors = '^1.2.0'
regex = '1'
subject-classifier = '0.4.*'
thiserror = '1'
tinyjson = '2'
unicode-segmentation = '1.7.1'
unicode-truncate = '0.2.0'
unicode-width = '0.1.10'
url = '2'
vte = { version = '0.11.0', default_features = false }
which = '4'

[dependencies.clap]
version = '^4.0.7'
default-features = false
features = ['cargo', 'derive', 'std', 'help', 'usage', 'error-context']

[dependencies.update-informer]
version = '^0.5.0'
default_features = false
features = ["github"]
optional = true

[dev-dependencies]
lipsum = '^0.8.2'
pretty_assertions = "^1.2.1"

[features]
default = ["update-informer"]
update-informer = ["dep:update-informer"]
